--- a/src/assets/locales/en_us.json
+++ b/src/assets/locales/en_us.json
@@ -12,6 +12,7 @@
 		"技能": "Skills",
 		"專案": "Projects",
 		"語言": "Language",
+		"版權宣告": "Copyright",
 		"App Store": "App Store",
 		"郵件": "Mail",
 		"相機": "Camera",
